--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css");
 
 :root {
-  --primary-color: #354a15;
+  --primary-color: #75816b;
   --secondary-color: #2e8b57;
   --highlight-color: #3cb371;
 }
