--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ header .navbar {
 }
 
 #me{
-  padding: 10px 0px;
+  padding: 100px 0px;
 }
 
 .container{
@@ -83,7 +83,8 @@ header .navbar {
 
 .left p{
   font-size: 30px;
-  margin: 0px 150px;
+  margin: 0px 10px;
+  text-align: center;
 }
 
 .right{
