--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ header .navbar {
 
 .right{
   flex-basis: 50%;
-  margin-left: 30vh;
-  margin-top: 15vh;
+  margin-top: -50vh;
+  padding-left: 100vh;
 }
 
