--- a/style.css
+++ b/style.css
@@ -117,3 +117,24 @@ header .navbar {
   font-size: 20px;
   margin: 10px 0px;
 }
+
+#eNs{
+  padding: 100px 0px;
+  width: 100%;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
+
+.experience-left-col{
+  flex-basis: 50%;
+  max-width: 120vh;
+  padding-left: 5vh;
+}
+
+.skill-right-col{
+  flex-basis: 50%;
+  margin-top: -50vh;
+  padding-left: 100vh;
+}
