--- a/style.css
+++ b/style.css
@@ -202,7 +202,40 @@ header .navbar {
   color: #444;
 }
 
+//*--Cartoon page--*//
+.video-wrapper [
+  width: 700px;
+  margin: 0 auto;
+  border: 15px solid rbga(255, 255, 255, 0.5);
+  border-radius: 10px;
+  height: 400px;
+}
 
+.video {
+  width: 100%;
+}
+ 
+.my-controls {
+  display: flex;
+  list-style: none;
+  justify-content: center;
+  margin-top: 30px;
+}
 
+.my-controls li{
+  width: 100px;
+  line-height: 100px;
+  background: rgba(255, 255, 255, 0.6);
+  margin: 0 15px;
+  border-radius: 50%;
+  text-align: center;
+  font-size: 20px;
+  border: 5px solid orange;
+  cursor: pointer;
+  transition: transform 1s ease;
+}
 
+.my-controls li:hover{
+  transform: rotate(180deg);
+}
 
