--- a/style.css
+++ b/style.css
@@ -215,14 +215,14 @@ header .navbar {
   width: 100%;
 }
  
-.video warpper .my-controls {
+.video-warpper .my-controls {
   display: flex;
   list-style: none;
   justify-content: center;
   margin-top: 30px;
 }
 
-.video wrapper .my-controls li{
+.video-wrapper .my-controls li{
   width: 100px;
   line-height: 100px;
   background: rgba(255, 255, 255, 0.6);
@@ -235,7 +235,7 @@ header .navbar {
   transition: transform 1s ease;
 }
 
-.video wrapper .my-controls li:hover{
+.video-wrapper .my-controls li:hover{
   transform: rotate(180deg);
 }
 
