--- a/style.css
+++ b/style.css
@@ -203,39 +203,32 @@ header .navbar {
   color: #444;
 }
 
-.video-wrapper [
-  width: 700px;
-  margin: 0 auto;
-  border: 15px solid rbga(255, 255, 255, 0.5);
-  border-radius: 10px;
-  height: 400px;
-}
-
-.video {
+.container {
   width: 100%;
-}
- 
-.video-warpper .my-controls {
   display: flex;
-  list-style: none;
-  justify-content: center;
-  margin-top: 30px;
-}
-
-.video-wrapper .my-controls li{
-  width: 100px;
-  line-height: 100px;
-  background: rgba(255, 255, 255, 0.6);
-  margin: 0 15px;
-  border-radius: 50%;
   text-align: center;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+}
+
+.left{
+  flex-basis: 50%;
+  max-width: 400px;
+  padding-left: 5vh;
+}
+
+.left h2{
+  font-size: 50px;
+}
+
+.left p{
   font-size: 20px;
-  border: 5px solid orange;
-  cursor: pointer;
-  transition: transform 1s ease;
+  margin: 10px 0px;
 }
 
-.video-wrapper .my-controls li:hover{
-  transform: rotate(180deg);
+.right img{
+  flex-basis: 50%;
+  margin-left: 30vh;
+  margin-top: 15vh;
 }
-
