--- a/style.css
+++ b/style.css
@@ -205,11 +205,11 @@ header .navbar {
 
 .container2 {
   width: 100%;
+  display: flex;
   text-align: center;
   justify-content: center;
   align-items: center;
   padding: 10px;
-  margin-top: 20vh;
 }
 
 .container2 .left{
@@ -229,6 +229,6 @@ header .navbar {
 
 .container2 .right img{
   flex-basis: 50%;
-  margin-left: 80vh;
-  margin-top: 30vh;
+  margin-left: 30vh;
+  margin-top: 10vh;
 }
