--- a/style.css
+++ b/style.css
@@ -212,22 +212,26 @@ header .navbar {
   padding: 10px;
 }
 
-.container2 .left2{
+.container2 .left2, 
+.container2 .right2 {
   flex-basis: 50%;
   max-width: 400px;
   padding-left: 5vh;
 }
 
-.container2 .left2 h2{
+.container2 .left2 h2,
+.container2 .right2 h2 {
   font-size: 50px;
 }
 
-.container2 .left2 p{
+.container2 .left2 p, 
+.container2 .right2 p {
   font-size: 20px;
   margin: 10px 0px;
 }
 
-.container2 .right2 img{
+.container2 .right2 img, 
+.container2 .left2 img {
   flex-basis: 50%;
   margin-left: 30vh;
   margin-top: 10vh;
