--- a/style.css
+++ b/style.css
@@ -233,22 +233,22 @@ header .navbar {
   margin-top: 10vh;
 }
 
-.container2 .left3 {
+.container2 .right3 {
   flex-basis: 50%;
   max-width: 400px;
   padding-left: 5vh;
 }
 
-.container2 .left3 h2 {
+.container2 .right3 h2 {
   font-size: 50px;
 }
 
-.container2 .left3 p{
+.container2 .right3 p{
   font-size: 20px;
   margin: 10px 0px;
 }
 
-.container2 .right3 img {
+.container2 .left3 img {
   flex-basis: 50%;
   margin-left: 30vh;
   margin-top: 10vh;
